# auth

./: .env  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  seeds.py
app/core/: config.py  database.py  security.py  startup.py
app/exceptions/: auth_exceptions.py  permission_exceptions.py  role_exceptions.py  user_exceptions.py
app/models/: associations.py  permission.py  role.py  student_profile.py  user.py
app/repositories/: permission_repository.py  role_repository.py  user_repository.py
app/routers/: auth.py  dependencies.py  permissions.py  roles.py  users.py
app/schemas/: auth.py  hemis.py  pagination.py  permission.py  role.py  student_profile.py  types.py  user.py
app/services/: auth_service.py  hemis_service.py  permission_service.py  role_service.py  user_service.py
migrations/: env.py
migrations/versions/: 560fa27555ba_create_roles_and_users_tables.py  b74f86755d09_add_user_roles_table_drop_role_id.py  d3e4f5a6b7c8_add_permissions_and_role_permissions.py  e5f6a7b8c9d0_add_student_profiles_table.py  f1a2b3c4d5e6_extend_student_profiles.py
